footer done, Correction to MovieCard link and MovieDetails scrollbar

--- a/src/pages/MovieDetails.module.css
+++ b/src/pages/MovieDetails.module.css
@@ -71,6 +71,7 @@
 
 .distribution {
 	color: var(--color-text);
+	margin-bottom: 24px;
 }
 
 .distribution .title {
@@ -95,7 +96,11 @@
 	}
 
 	.img-container {
-		height: 420px;
+		height: 360px;
+	}
+
+	.img {
+		height: 100%;
 	}
 
 	.title-container {
@@ -111,6 +116,6 @@
 		height: 50vh;
 		overflow-y: scroll;
 		scrollbar-width: thin;
-		scrollbar-color: var(--color-primary) var(--color-surface);
+		scrollbar-color: var(--color-accent) var(--color-surface);
 	}
 }
